# pristine-canvas-blank

./: ANDROID_DEVELOPMENT_GUIDE.md  ANDROID_SETUP.md  ELECTRON_README.md  README.md  TAURI_SETUP.md  TAURI_SETUP_GUIDE.md  capacitor.config.ts  electron-package.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
electron/: main.js  preload.js
scripts/: setup-android.js  setup-tauri.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mobile.rs
src/config/: firebase.ts  voice-action-commands.ts  voice-nav-routes.ts
src/context/: AuthContext.tsx  FinanceContext.tsx  FirebaseAuthContext.tsx  FirebaseDataContext.tsx  LocalAuthContext.tsx  VoiceNavigationContext.tsx
src/hooks/: use-local-storage.ts  use-mobile.tsx  use-toast.ts  useDataSync.ts  useFirebaseRealtime.ts  useVoiceAction.tsx  useVoiceNavigation.tsx
src/pages/: AppEntry.tsx  AreaCost.tsx  AreaReports.tsx  Areas.tsx  BalanceSheet.tsx  BatchPaymentEntry.tsx  Calculator.tsx  CustomerDetail.tsx  CustomerManagement.tsx  Customers.tsx  Dashboard.tsx  Index.tsx  NotFound.tsx  PaymentEntry.tsx  Posting.tsx  PostingDetails.tsx  Reports.tsx  Settings.tsx
src/services/: DataSyncService.ts  FirebaseDataService.ts  FirebaseRealtimeService.ts  FirebaseService.ts  LocalAuthService.ts
src/styles/: mobile.css
src/types/: balanceSheet.ts
src/utils/: balanceSheetCalculations.ts  balanceSheetExport.ts  customerExport.ts  dataExport.ts  idGeneration.ts  idGenerator.ts  (+7 more)
supabase/: config.toml
(+37 files in other folders)
