
[package]
name = "collectify-manager"
version = "1.0.0"
description = "Finance collection management desktop and mobile application"
authors = ["Collectify Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = ["mobile"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
android_logger = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mobile = ["tauri/mobile"]

[[bin]]
name = "collectify-manager"
path = "src/main.rs"
